# Synthetic-Arabic-Data

./: .env.example  .gitignore  CLI_ARGUMENT_UPDATES.md  PIPELINE_EXPLANATION.md  Persona_PIPELINE_DETAILED.md  README.md  SEED_CONSTRAINTS.md  STYLE_PERSONA_WORKFLOW_GUIDE.md  StyleGuide_PIPELINE_DETAILED.md  build_persona_requests.py  convert_exams_csv.py  exam_sampler.py  pyproject.toml  quality_check.py  send_persona_requests.py  test-00000-of-00001.arabic.csv
data/: exams.jsonl
data/personas/: selected_200.jsonl
data/seeds/: exams_seeds_from_testset.jsonl
outputs/: exams_clean.jsonl  exams_errors.jsonl  exams_real_from_testset.jsonl  flagged_samples.csv  quality_report.json
outputs/test_01/: built_personas_exams.jsonl  exams.jsonl  exams_10.jsonl  exams_withpersona_raw.jsonl  persona_flagged_samples.csv  persona_quality_report.json  selected_10.jsonl
outputs/test_real_workflow/: final_responses.jsonl  persona_requests.jsonl  seeds.jsonl  styled_seeds.jsonl  workflow_summary.json
outputs/test_workflow_seeds_more/: combined_requests.jsonl  seeds.jsonl  styled_seeds.jsonl  workflow_summary.json
scripts/: personas_select.py
src/arabic_synth/: cli.py
src/arabic_synth/augment/: augment.py
src/arabic_synth/data_prep/: convert_csv.py  exam_processor.py  personas_select.py
src/arabic_synth/evaluate/: evaluate.py  evaluate_persona.py  evaluate_style.py
src/arabic_synth/generators/: persona_augment.py  run.py
src/arabic_synth/persona/: build_requests.py  send_requests.py  templates_persona.py
src/prompts/: templates.py
src/schemas/: grammar.py
(+10 files in other folders)
